[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.68"
chrono = "0.4.23"
crossbeam-utils = "0.8.14"
ctrlc = { version = "3.2.4", features = ["termination"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.9.0"
ethereum-types = "0.14.1"
futures = "0.3.25"
hex = "0.4.3"
isahc = "1.7.2"
log = "0.4.17"
rust-crypto = "0.2.36"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
assert_cmd = "2.0.8"
nix = "0.26.1"
serial_test = "0.10.0"


[dev-dependencies.cargo-husky]
version = "1.0"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt", "run-cargo-check", "run-cargo-test"]
